--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,346 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="10" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DNauNX"><img src="https://m.media-amazon.com/images/I/51g-RtDRQgL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DNauNX">G-Cord Apple MFI Certified Short Lightning to USB Charging and Sync Cable (5 Pack, 7 Inch)</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $14.99</strong> using code:10Z825RC</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DNauNX">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="45.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DLEEkA"><img src="https://m.media-amazon.com/images/I/71t23aqcjNL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DLEEkA">Nonstick Frying Pan, AICOOK Fry Pan, Induction Fry Pan, Copper Pan, Copper Cookware, Dishwasher Safe PFOA Free Fry Pan/Saute Pan Cookware Set</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>46% off at $45.99</strong> using code:46VTJFVL</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DLEEkA">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="33.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PKfmZ1"><img src="https://m.media-amazon.com/images/I/61uaFJ5oxHL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2PKfmZ1">MICHELANGELO Stainless Steel Pepper Grinder Mill with Gourmet Precision Carbon Steel Mechanism and Adjustable Settings, Grinder Only</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>70% off at $33.00</strong> using code:70CTQBP9</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PKfmZ1">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GXZNcm"><img src="https://m.media-amazon.com/images/I/712UroFJfXL._SR400,400_.jpg" alt="Stainless Steel Drinking Straws" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GXZNcm">Chefast Stainless Steel Drinking Straws - 4x2 Combo Kit - Reusable Metal Straws for Everything From 30 oz Yeti Tumblers to Thick Smoothies</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>40% off at $14.99</strong> using code:40UMW1QF</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GXZNcm">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="89.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DLKe6u"><img src="https://m.media-amazon.com/images/I/51Up6r7ysWL._SR400,400_.jpg" alt="5 Quart Copper Saute Pan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DLKe6u">MICHELANGELO Ultra Nonstick 5 Quart Copper Saute Pan with Lid, Copper Frying Pan, Deep Saute Pan Nonstick</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $89.99</strong> using code:80J3SZUR</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DLKe6u">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GWgGFb"><img src="https://m.media-amazon.com/images/I/61PAiy+rXPL._SR400,400_.jpg" alt="Clothes Steamer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GWgGFb">AICOK Clothes Steamer, Travel and Home Hand Steamer for Clothes, New Version Garment Steamer 40 Seconds Fast Heat-up</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $29.99</strong> using code:15ADWSP4</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GWgGFb">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="38.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DLAj0P"><img src="https://m.media-amazon.com/images/I/61bqXb4xyGL._SR400,400_.jpg" alt="Double Wall Electric Milk Steamer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DLAj0P">Milk Frother Aicok, Double Wall Electric Milk Steamer with Hot or Cold Milk Foaming Functions, Strix Controller, Silent Operation, Non-Stick Coating</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $38.98</strong> using code:25LGFXN6</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DLAj0P">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GPezSw"><img src="https://m.media-amazon.com/images/I/71HwidAvmWL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GPezSw">AICOK Food Steamer 9.5 Quart Vegetable Steamer with BPA-Free 3 Tier Stackable Baskets, 800W Fast Heating Electric Steamer Including Egg Holders and Rice Bowl</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $39.99</strong> using code:20YW8UI1</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GPezSw">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vz4wf3"><img src="https://m.media-amazon.com/images/I/610eEsAlZpL._SR400,400_.jpg" alt="Kollea Blow Kitchen Torch" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>35% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2vz4wf3">Butane Torch, Kollea Blow Kitchen Torch Refillable Chef Cooking Culinary Torch Lighter with Safety Lock Fuel Gauge, Adjustable Flame [MAX 2500℉] for</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>35% off at $23.99</strong> using code:35JEE9LB</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vz4wf3">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GXFAEL"><img src="https://m.media-amazon.com/images/I/61ZudxDAmnL._SR400,400_.jpg" alt="Ovente KS960BG Electric Kettle" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GXFAEL">Ovente KS960BG Electric Kettle, Cordless Tea and Water Heater, Automatic Shut-Off & Boil-Dry Protection, BPA-Free</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.99</strong> using code:30PKCZXZ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GXFAEL">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="5" data-price="16.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JaPVhY"><img src="https://m.media-amazon.com/images/I/61H5sYjIwoL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>5% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2JaPVhY">Adjustable Jet Flame Portable Refillable Butane Lighter for Cigarette Camping Cooking BBQs Fireworks</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>5% off at $16.99</strong> using code:052NJ27B</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JaPVhY">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="32.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DLImL0"><img src="https://m.media-amazon.com/images/I/6119OWqFoyL._SR400,400_.jpg" alt="Portable Bluetooth Speakers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>45% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DLImL0">BassPal Portable Bluetooth Speakers, Small True Wireless Stereo (TWS) Speaker with Radio, IPX5 Waterproof, HD Sound & Enhanced Bass, Mini Pocket Size for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>45% off at $32.99</strong> using code:45C4X4GZ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DLImL0">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JagML6"><img src="https://m.media-amazon.com/images/I/61CIv7VY3GL._SR400,400_.jpg" alt="AAA 20 Batteries" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2JagML6">NANFU No Leakage Long Lasting AAA 20 Batteries [Ultra Power] Premium LR03 Alkaline Battery 1.5v Non Rechargeable Batteries for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $8.99</strong> using code:50Z8ZL3P</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JagML6">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H1wA1r"><img src="https://m.media-amazon.com/images/I/41mYcjH67YL._SR400,400_.jpg" alt="Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2H1wA1r">Bluetooth Headphones, XINBAOHONG Wireless Mini Sports Earphones in Ear Headset Built-in Microphone...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $39.99</strong> using code:60WP67I3</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H1wA1r">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="17.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DJYdtI"><img src="https://m.media-amazon.com/images/I/41uUldOZuCL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DJYdtI">X-nego Bluetooth Speakers,Portable Speakers with Loud Stereo Sound, 10-Hour Playtime, 33 ft Bluetooth Range. Wireless Wooden Speaker</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $17.98</strong> using code:30IMMMLD</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DJYdtI">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="36.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vAU5Ym"><img src="https://m.media-amazon.com/images/I/61Imr3h3tlL._SR400,400_.jpg" alt="Bluetooth 5.0 Transmitter Receiver" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2vAU5Ym">UZOPI Bluetooth 5.0 Transmitter Receiver, 2-in-1 Wireless Audio Adapter aptX Low Latency HD for TV Car Music Streaming Stereo Sound System</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $36.79</strong> using code:30WOFQQG</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vAU5Ym">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="41.87">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2vzzSm0"><img src="https://m.media-amazon.com/images/I/51v77G9AdUL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2vzzSm0">iPhone Flash Drive 128GB MFi Certified USB 3.0, HooToo Photo Stick for iPhone iPad, Touch ID Encryption...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $41.87</strong> using code:15HOOTOO</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2vzzSm0">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H09V5C"><img src="https://images-na.ssl-images-amazon.com/images/I/51qa%2B57xthL._SX679_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2H09V5C">LACORAMO Stylus Pen Compatible for iPad - 40hrs Work-time&30days Stand-by, Capacitive Rechargeable Pen for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $29.99</strong> using code:20RWA8UL</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2H09V5C">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="44.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DKIB9r"><img src="https://m.media-amazon.com/images/I/51k-D+1Q89L._SR400,400_.jpg" alt="Stylus Pen" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DKIB9r">LACORAMO Stylus Pen for Microsoft Surface,1.5mm Fine Point High Sensitivity and Precision Rechargeable Stylus Compatible with...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $44.99</strong> using code:20JDD46A</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DKIB9r">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="62.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GXO1jc"><img src="https://m.media-amazon.com/images/I/61uJFayGlWL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GXO1jc">Briefcases for Men,15.6 inch Laptop Bag,Work Business Travel Computer Bag with Multi Pockets for Notebook/MacBook/Tablet(Coffee)</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>60% off at $62.99</strong> using code:promo_code</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GXO1jc">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="15.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2DIQJHt"><img src="https://m.media-amazon.com/images/I/51giG1APWDL._SR400,400_.jpg" alt="" /></a>
