--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -16,6 +16,244 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="15" data-price="19.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jbj8td"><img src="https://m.media-amazon.com/images/I/71yXCPT6oGL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2Jbj8td">Mini iRoller Screen Cleaner: Reusable Liquid Free Touchscreen Cleaner for Smartphones and Tablets...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>15% off at $19.95</strong> using code:1581UUJB</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Jbj8td">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="8" data-price="21.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PLsfSK"><img src="https://m.media-amazon.com/images/I/61B7G+gGajL._SR400,400_.jpg" alt="USB C to HDMI VGA Adapter" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>8% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2PLsfSK">ZasLuke USB C to HDMI VGA Adapter, USB 3.1 Type C (USB-C) to 4K HDMI VGA Converter Adapter for...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>8% off at $21.99</strong> using code:08V6AT78</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PLsfSK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LkU7OL"><img src="https://m.media-amazon.com/images/I/41aw1-uLGEL._SR400,400_.jpg" alt="" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2LkU7OL">Sleep Headphones Bluetooth, Headband Headphones with Built -in Speakers, Sports Headband with Bluetooth Headphones for ...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.99</strong> using code:30K3REZ8</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2LkU7OL">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="5" data-price="199.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PJPT1H"><img src="https://m.media-amazon.com/images/I/81hQvGaqRmL._SR400,400_.jpg" alt="Star Wars" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>5% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2PJPT1H">UPSTONE Kybers Metal Hilt RGB Lightsaber Light Saber with Sound Aluminum Hilt Rechargeable Cosplay Jedi Sith Be Your Favorite Star Wars Character with</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>5% off at $199.99</strong> using code:05KYBERS</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PJPT1H">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2UWuDXx"><img src="https://m.media-amazon.com/images/I/71zN0fUZAML._SR400,400_.jpg" alt="YJY Car Diffuser for Essential Oils" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2UWuDXx">YJY Car Diffuser for Essential Oils Portable Home Humidifier, Ultrasonic None-Sponge-Wick USB Aromatherapy Intermittent Mode</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>25% off at $19.99</strong> using code:25XQ96YV</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2UWuDXx">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DIXFEi"><img src="https://m.media-amazon.com/images/I/61tnQ4WWmjL._SR400,400_.jpg" alt="Car Diffuser" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DIXFEi">Vyaime Car Diffuser Essential Oil Aromatherapy Diffusers with Dual USB Charger Adapter...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>30% off at $19.99</strong> using code:303L5YMP</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DIXFEi">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="15.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2DM9iu8"><img src="https://m.media-amazon.com/images/I/81qfNfX7xHL._SR400,400_.jpg" alt="Ice Packs" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2DM9iu8">OICEPACK Ice Packs for Lunch Box Blue, Coolers Reusable Ice Pack, Freezer Ice Packs for Coolers, Small Ice Pack Long Lasting, Stay Cold Camping Cooler Ice Pack </a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $15.99</strong> using code:50IMZWA6</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2DM9iu8">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="10" data-price="649.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2V98YQQ"><img src="https://m.media-amazon.com/images/I/71u4FS3p0tL._SR400,400_.jpg" alt="Hair Growth System" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>10% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2V98YQQ">REVIAN RED Hair Growth System (wireless w/Free Mobile App) - FDA Cleared Hair Loss Treatments: Hair Regrowth for Men and Women</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>10% off at $649.00</strong> using code:10REVIANAMZ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2V98YQQ">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="199.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VDWjoK"><img src="https://m.media-amazon.com/images/I/51z96Cof9WL._SR400,400_.jpg" alt="Lovinland 4 Tier Ladder Shelf Metal Bookshelf" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VDWjoK">Lovinland 4 Tier Ladder Shelf Metal Bookshelf Storage Shelves Unit Display White</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $199.99</strong> using code:80H4TAA9</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VDWjoK">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="529.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JjC751"><img src="https://m.media-amazon.com/images/I/51LssuVKOOL._SR400,400_.jpg" alt="Lovinland Play Table Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2JjC751">Lovinland Play Table Set, Wood Desk & 4 Chairs Set for Kids Espresso</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $529.95</strong> using code:80YN6YXX</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JjC751">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="1,099.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2PJBQcC"><img src="https://m.media-amazon.com/images/I/51eQ9IsoPQL._SR400,400_.jpg" alt="Lovinland Coffee Table Set" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2PJBQcC">Lovinland Coffee Table Set, 2pcs Arm Chairs 1pc Love Seat & Tempered Glass Rest Table Rattan Sofa Set Black</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $1,099.95</strong> using code:80YN6YXX</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2PJBQcC">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="94.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GYruCS"><img src="https://m.media-amazon.com/images/I/61EICQDuz-L._SR400,400_.jpg" alt="Folding Hair Dryer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GYruCS">YinQin 1600W Negative Ionic Folding Hair Dryer Light Weight Travel Hair Dryer 2 Speeds and Cool Shot Button Tourmaline Ceramic Portable Blow Dryer</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>80% off at $94.90</strong> using code:80LRMPNZ</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GYruCS">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="21.77">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2VbHhqx"><img src="https://m.media-amazon.com/images/I/61Za6X5DtAL._SR400,400_.jpg" alt="LED Lytes Flameless Candles with Timer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2VbHhqx">LED Lytes Flameless Candles with Timer, for Mom Gifts, Slim Set of 6, 2 Inches Wide and 2-9 Tall, Ivory Dripping Wax...</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>50% off at $21.77</strong> using code:50VOTS3H</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VbHhqx">Copy & Use code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GXMTMp"><img src="https://m.media-amazon.com/images/I/51Dly05PolL._SR400,400_.jpg" alt="Athlefit Women's Platform Sandals" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>20% OFF +</em> free shipping</span>
+    <p><a target="_blank" href="https://amzn.to/2GXMTMp">Athlefit Women's Platform Sandals Espadrille Ankle Strap Flat Sandals</a></p>
+    <div class="code_high">
+      <p><span>Take <strong>20% off at $23.99</strong> using code:20I5556L</span></p>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2GXMTMp">Copy & Use code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="10" data-price="14.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2DNauNX"><img src="https://m.media-amazon.com/images/I/51g-RtDRQgL._SR400,400_.jpg" alt="" /></a>
