--- a/app/views/deals/quick_search.html.erb
+++ b/app/views/deals/quick_search.html.erb
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="rt_cnt">
-          <h2>We Love</h2>
+          <h2>Quick search on Amazon</h2>
           
           <script type="text/javascript">
             amzn_assoc_placement = "adunit0";
