--- a/app/views/deals/promotions.html.erb
+++ b/app/views/deals/promotions.html.erb
@@ -15,7 +15,7 @@
         </div>
         
         <div class="rt_cnt">
-          <h2>We Love</h2>
+          <h2>Promotions on Amazon</h2>
           <div class="box_wrap">
             <div class="box">
               <a target="_blank" href="https://amzn.to/2EgkS1o">
